--- a/src/be/ac/ulb/infof307/g06/JavaUI/sample/Project_test.fxml
+++ b/src/be/ac/ulb/infof307/g06/JavaUI/sample/Project_test.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.shape.Ellipse?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="root" maxHeight="1080.0" maxWidth="1920.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="900.0" prefWidth="1500.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+<AnchorPane fx:id="root" maxHeight="1080.0" maxWidth="1920.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="900.0" prefWidth="1500.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="be.ac.ulb.infof307.g06.JavaUI.sample.Controller">
    <children>
       <Pane layoutX="894.0" layoutY="165.0" prefHeight="635.0" prefWidth="390.0" style="-fx-background-color: #c6ebff;">
          <children>
