--- a/src/be/ac/ulb/infof307/g06/JavaUI/sample/statistics1.fxml
+++ b/src/be/ac/ulb/infof307/g06/JavaUI/sample/statistics1.fxml
@@ -1,68 +1,161 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.control.ScrollBar?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Circle?>
-<?import javafx.scene.shape.CubicCurve?>
+<?import javafx.scene.shape.Polygon?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="799.0" prefWidth="1088.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="835.0" prefWidth="1229.0" style="-fx-background-color: #2F2F30;" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Pane layoutX="266.0" prefHeight="136.0" prefWidth="823.0" style="-fx-background-color: #f1948a;" AnchorPane.leftAnchor="266.0" AnchorPane.rightAnchor="-1.0" AnchorPane.topAnchor="0.0">
+      <Circle fill="#3f3f59" layoutX="122.0" layoutY="403.0" radius="122.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" />
+      <Polygon fill="#badbe3" layoutX="68.0" layoutY="-26.0" points="-68.0, 26.0, -67.99999237060547, 587.333251953125, 196.33334350585938, 25.99996566772461" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
+      <Polygon fill="#f4cbff" layoutX="320.0" layoutY="315.0" points="-47.0, 520.0, -320.0, 520.0, -320.0, -28.5" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" />
+      <Pane prefHeight="186.0" prefWidth="180.0" style="-fx-background-color: #B9DCE4;" />
+      <Pane prefHeight="186.0" prefWidth="180.0" style="-fx-background-color: #B9DCE4;">
          <children>
-            <Label layoutX="14.0" layoutY="37.0" prefHeight="87.0" prefWidth="250.0" text="Statistics" textFill="WHITE">
-               <font>
-                  <Font size="49.0" />
-               </font>
-            </Label>
-         </children>
-      </Pane>
-      <Pane layoutX="266.0" layoutY="136.0" prefHeight="663.0" prefWidth="823.0">
-         <children>
-            <CheckBox layoutX="515.0" layoutY="115.0" mnemonicParsing="false" prefHeight="136.0" prefWidth="146.0" style="-fx-background-color: #dfdfdf;" text="Projet 3" />
-            <CheckBox layoutX="307.0" layoutY="115.0" mnemonicParsing="false" prefHeight="136.0" prefWidth="146.0" style="-fx-background-color: #dfdfdf;" text="Projet 2" />
-            <Button layoutX="560.0" layoutY="567.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="146.0" text="Visualiser" />
-            <CheckBox layoutX="515.0" layoutY="316.0" mnemonicParsing="false" prefHeight="136.0" prefWidth="146.0" style="-fx-background-color: #dfdfdf;" text="Projet 6" />
-            <CheckBox layoutX="26.0" layoutY="23.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="182.0" text="Tout selctionner" />
-            <CheckBox layoutX="80.0" layoutY="115.0" mnemonicParsing="false" prefHeight="136.0" prefWidth="146.0" style="-fx-background-color: #dfdfdf;" text="Projet 1" />
-            <CheckBox layoutX="80.0" layoutY="316.0" mnemonicParsing="false" prefHeight="136.0" prefWidth="146.0" style="-fx-background-color: #dfdfdf;" text="Projet 4" />
-            <CheckBox layoutX="307.0" layoutY="323.0" mnemonicParsing="false" prefHeight="136.0" prefWidth="146.0" style="-fx-background-color: #dfdfdf;" text="Projet 5" />
-         </children>
-      </Pane>
-      <VBox prefHeight="799.0" prefWidth="268.0" style="-fx-background-color: #f1948a;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
-         <children>
-            <Pane prefHeight="136.0" prefWidth="268.0" style="-fx-background-color: F26C5D;">
+            <Pane prefHeight="200.0" prefWidth="200.0">
                <children>
-                  <Label layoutX="106.0" layoutY="25.0" prefHeight="87.0" prefWidth="155.0" text="ProGestion" textFill="WHITE">
+                  <Label layoutX="7.0" layoutY="7.0" prefHeight="17.0" prefWidth="143.0" text="logo ">
                      <font>
-                        <Font size="27.0" />
+                        <Font size="24.0" />
                      </font>
                   </Label>
-                  <Circle fill="DODGERBLUE" layoutX="46.0" layoutY="68.0" radius="27.0" stroke="BLACK" strokeType="INSIDE" />
-                  <CubicCurve controlX1="-16.0" controlX2="-26.0" controlY1="-130.0" controlY2="2.0" endX="7.8113555908203125" endY="-29.0" fill="DODGERBLUE" layoutX="77.0" layoutY="128.0" startX="-71.18864440917969" startY="-89.0" stroke="BLACK" />
                </children>
             </Pane>
-            <Pane prefHeight="316.0" prefWidth="268.0">
-               <children>
-                  <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="64.0" layoutY="51.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../../../../../../../../../Images/kisspng-computer-icons-login-user-profile-avatar-female-avatar-5b0c7ddd23a033.9936957615275453091459.png" />
-                     </image>
-                  </ImageView>
-                  <Label layoutY="213.0" prefHeight="35.0" prefWidth="268.0" text="Aline" />
-                  <Label layoutY="237.0" prefHeight="35.0" prefWidth="268.0" text="Projets : 8" />
-               </children>
-            </Pane>
-            <Button mnemonicParsing="false" prefHeight="52.0" prefWidth="271.0" style="-fx-background-color: F26C5D;" text="Menu" />
-            <Button mnemonicParsing="false" prefHeight="52.0" prefWidth="271.0" style="-fx-background-color: F26C5D;" text="Paramètres" />
-            <Button mnemonicParsing="false" prefHeight="52.0" prefWidth="271.0" style="-fx-background-color: F26C5D;" text="Deconnexion" />
          </children>
-      </VBox>
+      </Pane>
+      <ScrollBar layoutX="1065.0" layoutY="1.0" orientation="VERTICAL" prefHeight="799.0" prefWidth="24.0" AnchorPane.bottomAnchor="-1.3333333333333712" AnchorPane.rightAnchor="-1.0" AnchorPane.topAnchor="1.0" />
+      <HBox layoutX="393.0" layoutY="225.0" prefHeight="201.0" prefWidth="990.0" spacing="35.0" AnchorPane.rightAnchor="-40.0">
+         <children>
+            <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #B9DCE4;">
+               <children>
+                  <Pane prefHeight="48.0" prefWidth="200.0" style="-fx-background-color: #3F3F59;">
+                     <children>
+                        <Label layoutX="49.0" layoutY="5.0" text="Projet 5 " textFill="WHITE">
+                           <font>
+                              <Font size="27.0" />
+                           </font>
+                        </Label>
+                        <CheckBox layoutX="23.0" layoutY="14.0" mnemonicParsing="false" prefHeight="21.0" prefWidth="13.0" />
+                     </children>
+                  </Pane>
+               </children>
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
+            </Pane>
+            <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #B9DCE4;">
+               <children>
+                  <Pane prefHeight="48.0" prefWidth="200.0" style="-fx-background-color: #3F3F59;">
+                     <children>
+                        <Label layoutX="49.0" layoutY="5.0" text="Projet 5 " textFill="WHITE">
+                           <font>
+                              <Font size="27.0" />
+                           </font>
+                        </Label>
+                        <CheckBox layoutX="23.0" layoutY="14.0" mnemonicParsing="false" prefHeight="21.0" prefWidth="13.0" />
+                     </children>
+                  </Pane>
+               </children>
+            </Pane>
+            <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #B9DCE4;">
+               <children>
+                  <Pane layoutY="1.0" prefHeight="48.0" prefWidth="200.0" style="-fx-background-color: #3F3F59;">
+                     <children>
+                        <Label layoutX="49.0" layoutY="5.0" text="Projet 5 " textFill="WHITE">
+                           <font>
+                              <Font size="27.0" />
+                           </font>
+                        </Label>
+                        <CheckBox layoutX="23.0" layoutY="14.0" mnemonicParsing="false" prefHeight="21.0" prefWidth="13.0" />
+                     </children>
+                  </Pane>
+               </children>
+            </Pane>
+            <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #B9DCE4;">
+               <children>
+                  <Pane layoutX="-1.0" layoutY="1.0" prefHeight="48.0" prefWidth="200.0" style="-fx-background-color: #3F3F59;">
+                     <children>
+                        <Label layoutX="49.0" layoutY="5.0" text="Projet 5 " textFill="WHITE">
+                           <font>
+                              <Font size="27.0" />
+                           </font>
+                        </Label>
+                        <CheckBox layoutX="23.0" layoutY="14.0" mnemonicParsing="false" prefHeight="21.0" prefWidth="13.0" />
+                     </children>
+                  </Pane>
+               </children>
+            </Pane>
+         </children>
+      </HBox>
+      <HBox layoutX="389.0" layoutY="467.0" prefHeight="201.0" prefWidth="990.0" spacing="35.0" AnchorPane.rightAnchor="-40.0">
+         <children>
+            <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #B9DCE4;">
+               <children>
+                  <Pane prefHeight="48.0" prefWidth="200.0" style="-fx-background-color: #3F3F59;">
+                     <children>
+                        <Label layoutX="49.0" layoutY="5.0" text="Projet 5 " textFill="WHITE">
+                           <font>
+                              <Font size="27.0" />
+                           </font>
+                        </Label>
+                        <CheckBox layoutX="23.0" layoutY="14.0" mnemonicParsing="false" prefHeight="21.0" prefWidth="13.0" />
+                     </children>
+                  </Pane>
+               </children>
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
+            </Pane>
+            <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #B9DCE4;">
+               <children>
+                  <Pane prefHeight="48.0" prefWidth="200.0" style="-fx-background-color: #3F3F59;">
+                     <children>
+                        <Label layoutX="49.0" layoutY="5.0" text="Projet 5 " textFill="WHITE">
+                           <font>
+                              <Font size="27.0" />
+                           </font>
+                        </Label>
+                        <CheckBox layoutX="23.0" layoutY="14.0" mnemonicParsing="false" prefHeight="21.0" prefWidth="13.0" />
+                     </children>
+                  </Pane>
+               </children>
+            </Pane>
+            <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #B9DCE4;">
+               <children>
+                  <Pane layoutY="1.0" prefHeight="48.0" prefWidth="200.0" style="-fx-background-color: #3F3F59;">
+                     <children>
+                        <Label layoutX="49.0" layoutY="5.0" text="Projet 5 " textFill="WHITE">
+                           <font>
+                              <Font size="27.0" />
+                           </font>
+                        </Label>
+                        <CheckBox layoutX="23.0" layoutY="14.0" mnemonicParsing="false" prefHeight="21.0" prefWidth="13.0" />
+                     </children>
+                  </Pane>
+               </children>
+            </Pane>
+            <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #B9DCE4;">
+               <children>
+                  <Pane layoutX="-1.0" layoutY="1.0" prefHeight="48.0" prefWidth="200.0" style="-fx-background-color: #3F3F59;">
+                     <children>
+                        <Label layoutX="49.0" layoutY="5.0" text="Projet 5 " textFill="WHITE">
+                           <font>
+                              <Font size="27.0" />
+                           </font>
+                        </Label>
+                        <CheckBox layoutX="23.0" layoutY="14.0" mnemonicParsing="false" prefHeight="21.0" prefWidth="13.0" />
+                     </children>
+                  </Pane>
+               </children>
+            </Pane>
+         </children>
+      </HBox>
    </children>
 </AnchorPane>
