--- a/src/be/ac/ulb/infof307/g06/JavaUI/sample/statistics1.fxml
+++ b/src/be/ac/ulb/infof307/g06/JavaUI/sample/statistics1.fxml
@@ -1,50 +1,45 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollBar?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
-<?import javafx.scene.shape.Circle?>
 <?import javafx.scene.shape.Polygon?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="835.0" prefWidth="1229.0" style="-fx-background-color: #2F2F30;" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="843.0" prefWidth="1492.0" style="-fx-background-color: #2F2F30;" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Circle fill="#3f3f59" layoutX="122.0" layoutY="403.0" radius="122.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" />
-      <Polygon fill="#badbe3" layoutX="68.0" layoutY="-26.0" points="-68.0, 26.0, -67.99999237060547, 587.333251953125, 196.33334350585938, 25.99996566772461" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
-      <Polygon fill="#f4cbff" layoutX="320.0" layoutY="315.0" points="-47.0, 520.0, -320.0, 520.0, -320.0, -28.5" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" />
-      <Pane prefHeight="186.0" prefWidth="180.0" style="-fx-background-color: #B9DCE4;" />
-      <Pane prefHeight="186.0" prefWidth="180.0" style="-fx-background-color: #B9DCE4;">
+      <Polygon fill="#b9dce4" layoutX="68.0" layoutY="-26.0" points="-68.0, 26.0, -67.99999237060547, 587.333251953125, 311.0, 26.000030517578125" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
+      <Polygon fill="#f4cbff" layoutX="320.0" layoutY="315.0" points="63.0, 520.0, -320.0, 520.0, -320.0, -28.5" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" />
+      <Pane prefHeight="70.0" prefWidth="320.0" style="-fx-background-color: #B9DCE4;">
          <children>
-            <Pane prefHeight="200.0" prefWidth="200.0">
-               <children>
-                  <Label layoutX="7.0" layoutY="7.0" prefHeight="17.0" prefWidth="143.0" text="logo ">
-                     <font>
-                        <Font size="24.0" />
-                     </font>
-                  </Label>
-               </children>
-            </Pane>
-         </children>
-      </Pane>
+            <Label layoutX="112.0" layoutY="21.0" prefHeight="40.0" prefWidth="137.0" text="LOGO" textFill="#1b0303">
+               <font>
+                  <Font size="23.0" />
+               </font>
+            </Label>
+         </children></Pane>
       <ScrollBar layoutX="1065.0" layoutY="1.0" orientation="VERTICAL" prefHeight="799.0" prefWidth="24.0" AnchorPane.bottomAnchor="-1.3333333333333712" AnchorPane.rightAnchor="-1.0" AnchorPane.topAnchor="1.0" />
-      <HBox layoutX="393.0" layoutY="225.0" prefHeight="201.0" prefWidth="990.0" spacing="35.0" AnchorPane.rightAnchor="-40.0">
+      <HBox layoutX="393.0" layoutY="223.0" prefHeight="203.0" prefWidth="922.0" spacing="35.0" AnchorPane.leftAnchor="400.0" AnchorPane.topAnchor="223.0">
          <children>
             <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #B9DCE4;">
                <children>
                   <Pane prefHeight="48.0" prefWidth="200.0" style="-fx-background-color: #3F3F59;">
                      <children>
-                        <Label layoutX="49.0" layoutY="5.0" text="Projet 5 " textFill="WHITE">
+                        <Label layoutX="49.0" layoutY="5.0" text="Project 1 " textFill="WHITE">
                            <font>
                               <Font size="27.0" />
                            </font>
                         </Label>
-                        <CheckBox layoutX="23.0" layoutY="14.0" mnemonicParsing="false" prefHeight="21.0" prefWidth="13.0" />
+                        <CheckBox layoutX="23.0" layoutY="14.0" mnemonicParsing="false" prefHeight="21.0" prefWidth="41.0" text="Project 1 " />
                      </children>
                   </Pane>
+                  <Label layoutX="18.0" layoutY="78.0" prefHeight="48.0" prefWidth="168.0" text="Name of the project" />
+                  <Label layoutX="18.0" layoutY="122.0" prefHeight="48.0" prefWidth="168.0" text="Description" />
                </children>
                <opaqueInsets>
                   <Insets />
@@ -54,7 +49,7 @@
                <children>
                   <Pane prefHeight="48.0" prefWidth="200.0" style="-fx-background-color: #3F3F59;">
                      <children>
-                        <Label layoutX="49.0" layoutY="5.0" text="Projet 5 " textFill="WHITE">
+                        <Label layoutX="49.0" layoutY="5.0" text="Project 2 " textFill="WHITE">
                            <font>
                               <Font size="27.0" />
                            </font>
@@ -62,13 +57,15 @@
                         <CheckBox layoutX="23.0" layoutY="14.0" mnemonicParsing="false" prefHeight="21.0" prefWidth="13.0" />
                      </children>
                   </Pane>
+                  <Label layoutX="16.0" layoutY="78.0" prefHeight="48.0" prefWidth="168.0" text="Name of the project" />
+                  <Label layoutX="16.0" layoutY="116.0" prefHeight="48.0" prefWidth="168.0" text="Description" />
                </children>
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #B9DCE4;">
                <children>
-                  <Pane layoutY="1.0" prefHeight="48.0" prefWidth="200.0" style="-fx-background-color: #3F3F59;">
+                  <Pane prefHeight="48.0" prefWidth="200.0" style="-fx-background-color: #3F3F59;">
                      <children>
-                        <Label layoutX="49.0" layoutY="5.0" text="Projet 5 " textFill="WHITE">
+                        <Label layoutX="49.0" layoutY="5.0" text="Project 3 " textFill="WHITE">
                            <font>
                               <Font size="27.0" />
                            </font>
@@ -76,13 +73,15 @@
                         <CheckBox layoutX="23.0" layoutY="14.0" mnemonicParsing="false" prefHeight="21.0" prefWidth="13.0" />
                      </children>
                   </Pane>
+                  <Label layoutX="16.0" layoutY="84.0" prefHeight="48.0" prefWidth="168.0" text="Name of the project" />
+                  <Label layoutX="16.0" layoutY="128.0" prefHeight="48.0" prefWidth="168.0" text="Description" />
                </children>
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #B9DCE4;">
                <children>
-                  <Pane layoutX="-1.0" layoutY="1.0" prefHeight="48.0" prefWidth="200.0" style="-fx-background-color: #3F3F59;">
+                  <Pane prefHeight="48.0" prefWidth="200.0" style="-fx-background-color: #3F3F59;">
                      <children>
-                        <Label layoutX="49.0" layoutY="5.0" text="Projet 5 " textFill="WHITE">
+                        <Label layoutX="49.0" layoutY="5.0" text="Project 4 " textFill="WHITE">
                            <font>
                               <Font size="27.0" />
                            </font>
@@ -90,17 +89,19 @@
                         <CheckBox layoutX="23.0" layoutY="14.0" mnemonicParsing="false" prefHeight="21.0" prefWidth="13.0" />
                      </children>
                   </Pane>
+                  <Label layoutX="26.0" layoutY="81.0" prefHeight="48.0" prefWidth="168.0" text="Name of the project" />
+                  <Label layoutX="26.0" layoutY="125.0" prefHeight="48.0" prefWidth="168.0" text="Description" />
                </children>
             </Pane>
          </children>
       </HBox>
-      <HBox layoutX="389.0" layoutY="467.0" prefHeight="201.0" prefWidth="990.0" spacing="35.0" AnchorPane.rightAnchor="-40.0">
+      <HBox layoutX="389.0" layoutY="467.0" prefHeight="214.0" prefWidth="922.0" spacing="35.0" AnchorPane.leftAnchor="400.0" AnchorPane.rightAnchor="170.0" AnchorPane.topAnchor="467.0">
          <children>
             <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #B9DCE4;">
                <children>
                   <Pane prefHeight="48.0" prefWidth="200.0" style="-fx-background-color: #3F3F59;">
                      <children>
-                        <Label layoutX="49.0" layoutY="5.0" text="Projet 5 " textFill="WHITE">
+                        <Label layoutX="49.0" layoutY="5.0" text="Project 5 " textFill="WHITE">
                            <font>
                               <Font size="27.0" />
                            </font>
@@ -108,6 +109,8 @@
                         <CheckBox layoutX="23.0" layoutY="14.0" mnemonicParsing="false" prefHeight="21.0" prefWidth="13.0" />
                      </children>
                   </Pane>
+                  <Label layoutX="16.0" layoutY="85.0" prefHeight="48.0" prefWidth="168.0" text="Name of the project" />
+                  <Label layoutX="16.0" layoutY="129.0" prefHeight="48.0" prefWidth="168.0" text="Description" />
                </children>
                <opaqueInsets>
                   <Insets />
@@ -117,7 +120,7 @@
                <children>
                   <Pane prefHeight="48.0" prefWidth="200.0" style="-fx-background-color: #3F3F59;">
                      <children>
-                        <Label layoutX="49.0" layoutY="5.0" text="Projet 5 " textFill="WHITE">
+                        <Label layoutX="49.0" layoutY="5.0" text="Project 6 " textFill="WHITE">
                            <font>
                               <Font size="27.0" />
                            </font>
@@ -125,13 +128,15 @@
                         <CheckBox layoutX="23.0" layoutY="14.0" mnemonicParsing="false" prefHeight="21.0" prefWidth="13.0" />
                      </children>
                   </Pane>
+                  <Label layoutX="16.0" layoutY="80.0" prefHeight="48.0" prefWidth="168.0" text="Name of the project" />
+                  <Label layoutX="16.0" layoutY="124.0" prefHeight="48.0" prefWidth="168.0" text="Description" />
                </children>
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #B9DCE4;">
                <children>
-                  <Pane layoutY="1.0" prefHeight="48.0" prefWidth="200.0" style="-fx-background-color: #3F3F59;">
+                  <Pane prefHeight="48.0" prefWidth="200.0" style="-fx-background-color: #3F3F59;">
                      <children>
-                        <Label layoutX="49.0" layoutY="5.0" text="Projet 5 " textFill="WHITE">
+                        <Label layoutX="49.0" layoutY="5.0" text="Project 7 " textFill="WHITE">
                            <font>
                               <Font size="27.0" />
                            </font>
@@ -139,13 +144,15 @@
                         <CheckBox layoutX="23.0" layoutY="14.0" mnemonicParsing="false" prefHeight="21.0" prefWidth="13.0" />
                      </children>
                   </Pane>
+                  <Label layoutX="16.0" layoutY="89.0" prefHeight="48.0" prefWidth="168.0" text="Name of the project" />
+                  <Label layoutX="16.0" layoutY="133.0" prefHeight="48.0" prefWidth="168.0" text="Description" />
                </children>
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #B9DCE4;">
                <children>
-                  <Pane layoutX="-1.0" layoutY="1.0" prefHeight="48.0" prefWidth="200.0" style="-fx-background-color: #3F3F59;">
+                  <Pane prefHeight="48.0" prefWidth="200.0" style="-fx-background-color: #3F3F59;">
                      <children>
-                        <Label layoutX="49.0" layoutY="5.0" text="Projet 5 " textFill="WHITE">
+                        <Label layoutX="49.0" layoutY="5.0" text="Project 8 " textFill="WHITE">
                            <font>
                               <Font size="27.0" />
                            </font>
@@ -153,9 +160,18 @@
                         <CheckBox layoutX="23.0" layoutY="14.0" mnemonicParsing="false" prefHeight="21.0" prefWidth="13.0" />
                      </children>
                   </Pane>
+                  <Label layoutX="16.0" layoutY="86.0" prefHeight="48.0" prefWidth="168.0" text="Name of the project" />
+                  <Label layoutX="16.0" layoutY="130.0" prefHeight="48.0" prefWidth="168.0" text="Description" />
                </children>
             </Pane>
          </children>
       </HBox>
+      <Button layoutX="1219.0" layoutY="735.0" mnemonicParsing="false" prefHeight="48.0" prefWidth="103.0" text="Visualise" />
+      <Label layoutX="360.0" layoutY="41.0" prefHeight="48.0" prefWidth="231.0" text="Statistics" textFill="#e8e8e8" AnchorPane.topAnchor="41.0">
+         <font>
+            <Font size="48.0" />
+         </font>
+      </Label>
+      <Label layoutX="360.0" layoutY="78.0" prefHeight="59.0" prefWidth="436.0" text="Select the project you want to visualise." textFill="WHITE" />
    </children>
 </AnchorPane>
