--- a/src/be/ac/ulb/infof307/g06/JavaUI/sample/Connection.fxml
+++ b/src/be/ac/ulb/infof307/g06/JavaUI/sample/Connection.fxml
@@ -3,11 +3,13 @@
 <?import com.gluonhq.charm.glisten.control.TextField?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.effect.Blend?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.shape.Polygon?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 <?import org.controlsfx.control.HyperlinkLabel?>
 <?import org.controlsfx.control.ToggleSwitch?>
 
@@ -15,21 +17,21 @@
    <children>
       <Pane layoutX="879.0" layoutY="170.0" prefHeight="539.0" prefWidth="367.0" style="-fx-background-color: #b1a493; -fx-border-color: #B9DCE4;">
          <children>
-            <TextField fx:id="Username" layoutX="74.0" layoutY="209.0" maxHeight="26.0" maxLength="64" maxWidth="220.0" minHeight="26.0" minWidth="0.0" prefHeight="26.0" prefWidth="220.0" promptText="Username/Email Address" />
-            <TextField fx:id="Password" layoutX="74.0" layoutY="279.0" maxHeight="26.0" maxLength="16" maxWidth="302.0" minHeight="26.0" minWidth="100.0" prefHeight="26.0" prefWidth="220.0" promptText="Password" />
-            <Button fx:id="ConnectionButton" layoutX="104.0" layoutY="356.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="159.0" style="-fx-background-color: #B9DCE4;" text="Connexion" textFill="#7c7a7a">
-               <effect>
-                  <Blend />
-               </effect>
-            </Button>
             <Label layoutX="116.0" layoutY="49.0" text="Sign In" textFill="WHITE">
                <font>
                   <Font name="Agency FB" size="64.0" />
                </font>
             </Label>
-            <HyperlinkLabel layoutX="131.0" layoutY="486.0" prefHeight="18.0" prefWidth="105.0" text="forgot password?" />
-            <Button fx:id="register_btn" layoutX="104.0" layoutY="424.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="159.0" style="-fx-background-color: #B9DCE4;" text="Register" textFill="#7c7a7a" />
+            <TextField fx:id="username" layoutX="74.0" layoutY="209.0" maxHeight="26.0" maxLength="64" maxWidth="220.0" minHeight="26.0" minWidth="0.0" prefHeight="26.0" prefWidth="220.0" promptText="Username/Email Address" />
+            <PasswordField fx:id="password" layoutX="74.0" layoutY="279.0" prefHeight="26.0" prefWidth="220.0" promptText="Password" />
+            <Button fx:id="connectionBtn" layoutX="104.0" layoutY="356.0" mnemonicParsing="false" onAction="#buttonEvents" prefHeight="34.0" prefWidth="159.0" style="-fx-background-color: #B9DCE4;" text="Connexion" textFill="#7c7a7a">
+               <effect>
+                  <Blend />
+               </effect>
+            </Button>
             <Label layoutX="177.0" layoutY="396.0" text="or" underline="true" />
+            <Button fx:id="registerBtn" layoutX="104.0" layoutY="424.0" mnemonicParsing="false" onAction="#buttonEvents" prefHeight="34.0" prefWidth="159.0" style="-fx-background-color: #B9DCE4;" text="Register" textFill="#7c7a7a" />
+            <HyperlinkLabel layoutX="131.0" layoutY="478.0" prefHeight="18.0" prefWidth="105.0" text="forgot password?" />
          </children>
       </Pane>
       <ToggleSwitch fx:id="toggle_switch" layoutX="1362.0" layoutY="44.0" text="Theme" />
@@ -39,5 +41,10 @@
       <Polygon fill="#f4cbff" layoutX="403.0" layoutY="-38.0" points="-403.0, 232.0, -403.0, 723.0, -17.0, 572.0" stroke="WHITE" strokeType="INSIDE" strokeWidth="0.0" />
       <Polygon fill="#3f3f59" layoutX="152.0" layoutY="810.0" points="-152.0, 90.0, 137.0, 90.0, -11.0, -168.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" />
       <Polygon fill="#b9dce4" layoutX="403.0" layoutY="269.0" points="-403.0, 156.0, -403.0, 631.0, 32.0, -63.0" stroke="WHITE" strokeType="INSIDE" strokeWidth="0.0" />
+      <Text fx:id="helloUser" fill="#f2eaea" layoutX="696.0" layoutY="789.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="734.0">
+         <font>
+            <Font name="Agency FB" size="48.0" />
+         </font>
+      </Text>
    </children>
 </AnchorPane>
