--- a/src/be/ac/ulb/infof307/g06/JavaUI/sample/Register.fxml
+++ b/src/be/ac/ulb/infof307/g06/JavaUI/sample/Register.fxml
@@ -8,6 +8,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Polygon?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 <?import org.controlsfx.control.ToggleSwitch?>
 
 <AnchorPane fx:id="root" maxHeight="1080.0" maxWidth="1920.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="900.0" prefWidth="1500.0" style="-fx-background-color: #2F2F30;" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="be.ac.ulb.infof307.g06.JavaUI.sample.Controller">
@@ -16,12 +17,12 @@
          <children>
             <VBox layoutX="74.0" layoutY="141.0" prefHeight="319.0" prefWidth="220.0" spacing="25.0">
                <children>
-                  <TextField fx:id="Username1" maxHeight="26.0" maxLength="64" maxWidth="220.0" minHeight="26.0" minWidth="0.0" prefHeight="26.0" prefWidth="220.0" promptText="First Name" />
-                  <TextField fx:id="Username2" maxHeight="26.0" maxLength="64" maxWidth="220.0" minHeight="26.0" minWidth="0.0" prefHeight="26.0" prefWidth="220.0" promptText="Last Name" />
-                  <TextField fx:id="Username" maxHeight="26.0" maxLength="64" maxWidth="220.0" minHeight="26.0" minWidth="0.0" prefHeight="26.0" prefWidth="220.0" promptText="Email Address" />
-                  <TextField fx:id="Username3" maxHeight="26.0" maxLength="64" maxWidth="220.0" minHeight="26.0" minWidth="0.0" prefHeight="26.0" prefWidth="220.0" promptText="Username" />
-                  <TextField fx:id="Password" maxHeight="26.0" maxLength="16" maxWidth="302.0" minHeight="26.0" minWidth="100.0" prefHeight="26.0" prefWidth="220.0" promptText="Password" />
-                  <TextField fx:id="Password1" floatText="Password Confirmation" maxHeight="26.0" maxLength="16" maxWidth="302.0" minHeight="26.0" minWidth="100.0" prefHeight="26.0" prefWidth="220.0" />
+                  <TextField fx:id="firstName" maxHeight="26.0" maxLength="24" maxWidth="220.0" minHeight="26.0" minWidth="0.0" prefHeight="26.0" prefWidth="220.0" promptText="First Name" />
+                  <TextField fx:id="lastName" maxHeight="26.0" maxLength="32" maxWidth="220.0" minHeight="26.0" minWidth="0.0" prefHeight="26.0" prefWidth="220.0" promptText="Last Name" />
+                  <TextField fx:id="emailAddress" maxHeight="26.0" maxLength="64" maxWidth="220.0" minHeight="26.0" minWidth="0.0" prefHeight="26.0" prefWidth="220.0" promptText="Email Address" />
+                  <TextField fx:id="username" maxHeight="26.0" maxLength="16" maxWidth="220.0" minHeight="26.0" minWidth="0.0" prefHeight="26.0" prefWidth="220.0" promptText="Username" />
+                  <TextField fx:id="registerPassword" maxHeight="26.0" maxLength="16" maxWidth="302.0" minHeight="26.0" minWidth="100.0" prefHeight="26.0" prefWidth="220.0" promptText="Password" />
+                  <TextField fx:id="passwordConfirmation" maxHeight="26.0" maxLength="16" maxWidth="302.0" minHeight="26.0" minWidth="100.0" prefHeight="26.0" prefWidth="220.0" promptText="Password Confirmation" />
                </children>
             </VBox>
             <Label layoutX="108.0" layoutY="31.0" text="Sign Up" textFill="WHITE">
@@ -29,7 +30,8 @@
                   <Font name="Agency FB" size="64.0" />
                </font>
             </Label>
-            <Button fx:id="register_btn" layoutX="104.0" layoutY="469.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="159.0" style="-fx-background-color: #B9DCE4;" text="Sign Up" textFill="#7c7a7a" />
+            <Button fx:id="SignUpBtn" layoutX="104.0" layoutY="469.0" mnemonicParsing="false" onAction="#buttonEvents" prefHeight="34.0" prefWidth="159.0" style="-fx-background-color: #B9DCE4;" text="Sign Up" textFill="#7c7a7a" />
+            <Button fx:id="goToConnection" layoutX="294.0" layoutY="469.0" mnemonicParsing="false" onAction="#buttonEvents" prefHeight="34.0" prefWidth="59.0" style="-fx-background-color: #B9DCE4;" text="Back" textFill="#7c7a7a" />
          </children>
       </Pane>
       <ToggleSwitch fx:id="toggle_switch" layoutX="1362.0" layoutY="44.0" text="Theme" />
@@ -39,5 +41,10 @@
       <Polygon fill="#f4cbff" layoutX="403.0" layoutY="-38.0" points="-403.0, 232.0, -403.0, 723.0, -17.0, 572.0" stroke="WHITE" strokeType="INSIDE" strokeWidth="0.0" />
       <Polygon fill="#3f3f59" layoutX="152.0" layoutY="810.0" points="-152.0, 90.0, 137.0, 90.0, -11.0, -168.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" />
       <Polygon fill="#b9dce4" layoutX="403.0" layoutY="269.0" points="-403.0, 156.0, -403.0, 631.0, 32.0, -63.0" stroke="WHITE" strokeType="INSIDE" strokeWidth="0.0" />
+      <Text fx:id="helloUser" fill="WHITE" layoutX="699.0" layoutY="790.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="682.9830722808838">
+         <font>
+            <Font name="Agency FB" size="48.0" />
+         </font>
+      </Text>
    </children>
 </AnchorPane>
