--- a/src/be/ac/ulb/infof307/g06/JavaUI/sample/statistics1.fxml
+++ b/src/be/ac/ulb/infof307/g06/JavaUI/sample/statistics1.fxml
@@ -35,7 +35,7 @@
                               <Font size="27.0" />
                            </font>
                         </Label>
-                        <CheckBox layoutX="23.0" layoutY="14.0" mnemonicParsing="false" prefHeight="21.0" prefWidth="41.0" text="Project 1 " />
+                        <CheckBox layoutX="23.0" layoutY="14.0" mnemonicParsing="false" prefHeight="21.0" prefWidth="41.0" />
                      </children>
                   </Pane>
                   <Label layoutX="18.0" layoutY="78.0" prefHeight="48.0" prefWidth="168.0" text="Name of the project" />
