--- a/src/be/ac/ulb/infof307/g06/JavaUI/sample/Stats.fxml
+++ b/src/be/ac/ulb/infof307/g06/JavaUI/sample/Stats.fxml
@@ -11,7 +11,8 @@
 <?import javafx.scene.shape.Polygon?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="843.0" prefWidth="1492.0" style="-fx-background-color: #2F2F30;" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<?import org.controlsfx.control.CheckComboBox?>
+<AnchorPane maxHeight="1080.0" maxWidth="1920.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="900.0" prefWidth="1500.0" style="-fx-background-color: #2F2F30;" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="be.ac.ulb.infof307.g06.JavaUI.sample.Controller">
    <children>
       <Polygon fill="#b9dce4" layoutX="68.0" layoutY="-26.0" points="-68.0, 26.0, -67.99999237060547, 587.333251953125, 311.0, 26.000030517578125" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
       <Polygon fill="#f4cbff" layoutX="320.0" layoutY="315.0" points="63.0, 520.0, -320.0, 520.0, -320.0, -28.5" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" />
@@ -30,12 +31,10 @@
                <children>
                   <Pane prefHeight="48.0" prefWidth="200.0" style="-fx-background-color: #3F3F59;">
                      <children>
-                        <Label layoutX="49.0" layoutY="5.0" text="Project 1 " textFill="WHITE">
+                        <CheckBox layoutX="23.0" layoutY="10.0" mnemonicParsing="false" prefHeight="21.0" prefWidth="155.0" text="Project 1" textAlignment="CENTER" textFill="WHITE">
                            <font>
-                              <Font size="27.0" />
-                           </font>
-                        </Label>
-                        <CheckBox layoutX="23.0" layoutY="14.0" mnemonicParsing="false" prefHeight="21.0" prefWidth="41.0" />
+                              <Font size="20.0" />
+                           </font></CheckBox>
                      </children>
                   </Pane>
                   <Label layoutX="18.0" layoutY="78.0" prefHeight="48.0" prefWidth="168.0" text="Name of the project" />
@@ -49,16 +48,16 @@
                <children>
                   <Pane prefHeight="48.0" prefWidth="200.0" style="-fx-background-color: #3F3F59;">
                      <children>
-                        <Label layoutX="49.0" layoutY="5.0" text="Project 2 " textFill="WHITE">
+                        <CheckBox layoutX="23.0" layoutY="10.0" mnemonicParsing="false" prefHeight="21.0" prefWidth="155.0" text="Project 2" textAlignment="CENTER" textFill="WHITE">
                            <font>
-                              <Font size="27.0" />
+                              <Font size="20.0" />
                            </font>
-                        </Label>
-                        <CheckBox layoutX="23.0" layoutY="14.0" mnemonicParsing="false" prefHeight="21.0" prefWidth="13.0" />
+                        </CheckBox>
                      </children>
                   </Pane>
                   <Label layoutX="16.0" layoutY="78.0" prefHeight="48.0" prefWidth="168.0" text="Name of the project" />
                   <Label layoutX="16.0" layoutY="116.0" prefHeight="48.0" prefWidth="168.0" text="Description" />
+                  <CheckComboBox layoutX="14.0" layoutY="158.0" prefHeight="21.0" prefWidth="153.0" title="Subproject" />
                </children>
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #B9DCE4;">
@@ -166,7 +165,7 @@
             </Pane>
          </children>
       </HBox>
-      <Button layoutX="1219.0" layoutY="735.0" mnemonicParsing="false" prefHeight="48.0" prefWidth="103.0" text="Visualise" />
+      <Button fx:id="visualiseBtn" onAction="#buttonEvents" layoutX="1219.0" layoutY="735.0" mnemonicParsing="false" prefHeight="48.0" prefWidth="103.0" text="Visualise" />
       <Label layoutX="360.0" layoutY="41.0" prefHeight="48.0" prefWidth="231.0" text="Statistics" textFill="#e8e8e8" AnchorPane.topAnchor="41.0">
          <font>
             <Font size="48.0" />
