--- a/src/be/ac/ulb/infof307/g06/JavaUI/sample/Connection.fxml
+++ b/src/be/ac/ulb/infof307/g06/JavaUI/sample/Connection.fxml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.gluonhq.charm.glisten.control.TextField?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.Blend?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
@@ -11,7 +11,6 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 <?import org.controlsfx.control.HyperlinkLabel?>
-<?import org.controlsfx.control.ToggleSwitch?>
 
 <AnchorPane fx:id="root" maxHeight="1080.0" maxWidth="1920.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="900.0" prefWidth="1500.0" style="-fx-background-color: #2F2F30;" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="be.ac.ulb.infof307.g06.JavaUI.sample.Controller">
    <children>
@@ -22,8 +21,7 @@
                   <Font name="Agency FB" size="64.0" />
                </font>
             </Label>
-            <TextField fx:id="username" layoutX="74.0" layoutY="209.0" maxHeight="26.0" maxLength="10" maxWidth="220.0" minHeight="26.0" minWidth="0.0" prefHeight="26.0" prefWidth="220.0" promptText="Username/Email Address" />
-            <PasswordField fx:id="password" layoutX="74.0" layoutY="279.0" prefHeight="26.0" prefWidth="220.0" promptText="Password" />
+            <PasswordField fx:id="logInPassword" layoutX="74.0" layoutY="279.0" prefHeight="26.0" prefWidth="220.0" promptText="Password" />
             <Button fx:id="connectionBtn" layoutX="104.0" layoutY="356.0" mnemonicParsing="false" onAction="#buttonEvents" prefHeight="34.0" prefWidth="159.0" style="-fx-background-color: #B9DCE4;" text="Connexion" textFill="#7c7a7a">
                <effect>
                   <Blend />
@@ -32,9 +30,9 @@
             <Label layoutX="177.0" layoutY="396.0" text="or" underline="true" />
             <Button fx:id="registerBtn" layoutX="104.0" layoutY="424.0" mnemonicParsing="false" onAction="#buttonEvents" prefHeight="34.0" prefWidth="159.0" style="-fx-background-color: #B9DCE4;" text="Register" textFill="#7c7a7a" />
             <HyperlinkLabel layoutX="131.0" layoutY="478.0" prefHeight="18.0" prefWidth="105.0" text="forgot password?" />
+            <TextField fx:id="logInUsername" layoutX="73.0" layoutY="211.0" prefHeight="26.0" prefWidth="220.0" promptText="Username/Email Address" />
          </children>
       </Pane>
-      <ToggleSwitch fx:id="toggleSwitch" layoutX="1362.0" layoutY="44.0" text="Theme" />
       <Polygon fill="#eefeac" layoutX="579.0" layoutY="182.0" points="-601.0, 178.0, -331.0, 647.0, -387.0, -105.0" stroke="WHITE" strokeType="INSIDE" />
       <Polygon fill="#eefeac" layoutX="483.0" layoutY="-68.0" points="-483.0, 68.0, -419.0, 624.0, -55.0, 68.0" stroke="WHITE" strokeType="INSIDE" />
       <Polygon fill="#b1a493" layoutX="409.0" layoutY="-148.0" points="-409.0, 148.0, -409.0, 555.0, 120.0, 148.0" stroke="WHITE" strokeType="INSIDE" strokeWidth="0.0" />
