--- a/src/be/ac/ulb/infof307/g06/JavaUI/sample/SignUpV2.fxml
+++ b/src/be/ac/ulb/infof307/g06/JavaUI/sample/SignUpV2.fxml
@@ -1,25 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.gluonhq.charm.glisten.control.Avatar?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.Bloom?>
-<?import javafx.scene.image.Image?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.shape.Polygon?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="359.0" prefWidth="616.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="be.ac.ulb.infof307.g06.JavaUI.sample.Controller">
+<AnchorPane prefHeight="900.0" prefWidth="1500.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="be.ac.ulb.infof307.g06.JavaUI.sample.Controller">
    <children>
-      <Polygon fill="#4ec8f50d" layoutX="-198.0" layoutY="378.0" points="198.00001525878906, 44.399993896484375, 198.00001525878906, -378.0, 453.5999755859375, 43.60003662109375" stroke="TRANSPARENT" strokeType="INSIDE" />
-      <Polygon fill="#4ec8f50d" layoutX="-206.0" layoutY="378.0" points="206.00001525878906, 44.399993896484375, 206.00001525878906, -378.0, 401.5999755859375, 43.0" stroke="TRANSPARENT" strokeType="INSIDE" />
-      <Polygon fill="#4ec8f50d" layoutX="-154.0" layoutY="378.0" points="154.00001525878906, 43.600006103515625, 154.00001525878906, -378.0, 280.0, 42.99993896484375" stroke="TRANSPARENT" strokeType="INSIDE" />
-      <GridPane hgap="10.0" vgap="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <Button id="registerBtn" fx:id="SignUpBtn" layoutX="611.0" layoutY="701.0" mnemonicParsing="false" onAction="#buttonEvents" prefHeight="53.0" prefWidth="278.0" style="-fx-background-color: #4fc3f7;" text="SIGN UP" textAlignment="CENTER" textFill="WHITE">
+         <font>
+            <Font name="Calibri Bold" size="24.0" />
+         </font>
+      </Button>
+      <Button id="registerBtn" fx:id="goToConnection" layoutX="611.0" layoutY="778.0" mnemonicParsing="false" onAction="#buttonEvents" prefHeight="53.0" prefWidth="278.0" style="-fx-background-color: #4fc3f7;" text="BACK" textAlignment="CENTER" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="24.0" />
+         </font>
+      </Button>
+      <Polygon fill="#4ec8f50d" layoutX="-206.0" layoutY="378.0" points="206.0, 522.0, 206.00001525878906, -378.0, 626.0, 522.0" stroke="TRANSPARENT" strokeType="INSIDE" />
+      <Polygon fill="#4ec8f50d" layoutX="-154.0" layoutY="378.0" points="154.0, 522.0, 154.00001525878906, -378.0, 465.0, 522.0" stroke="TRANSPARENT" strokeType="INSIDE" />
+      <Polygon fill="#4ec8f50d" layoutX="-198.0" layoutY="378.0" points="198.0, 522.0, 198.00001525878906, -378.0, 710.0, 522.0" stroke="TRANSPARENT" strokeType="INSIDE" />
+      <Polygon fill="#4ec8f50d" layoutX="-159.0" layoutY="378.0" points="159.0, 522.0, 159.00001525878906, -378.0, 747.0, 521.0" stroke="TRANSPARENT" strokeType="INSIDE">
+         <effect>
+            <Bloom />
+         </effect>
+      </Polygon>
+      <GridPane hgap="10.0" layoutX="387.0" layoutY="219.0" prefHeight="462.0" prefWidth="727.0" vgap="10.0">
          <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="75.0" />
             <ColumnConstraints hgrow="SOMETIMES" />
@@ -29,8 +41,8 @@
          </columnConstraints>
          <rowConstraints>
             <RowConstraints minHeight="10.0" prefHeight="109.3999755859375" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="51.80002441406248" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="65.5999786376953" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="108.0" minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="67.0" minHeight="10.0" prefHeight="54.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="12.800021362304676" prefHeight="12.800021362304676" vgrow="SOMETIMES" />
             <RowConstraints minHeight="25.800012207031273" prefHeight="53.79996337890623" vgrow="SOMETIMES" />
             <RowConstraints minHeight="43.59999694824222" prefHeight="55.40003662109376" vgrow="SOMETIMES" />
@@ -41,22 +53,7 @@
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding>
             </TextField>
-            <Button id="registerBtn" fx:id="SignUpBtn" mnemonicParsing="false" onAction="#buttonEvents" prefHeight="37.0" prefWidth="152.0" style="-fx-background-color: #4fc3f7;" text="SIGN UP" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="CENTER">
-               <font>
-                  <Font name="System Bold" size="24.0" />
-               </font>
-            </Button>
-            <Avatar radius="40.0" GridPane.columnIndex="3" GridPane.halignment="CENTER">
-               <image>
-                  <Image url="@../../Downloads/1200px-Octicons-mark-github.svg.png" />
-               </image>
-            </Avatar>
             <TextField id="password" fx:id="email" accessibleRole="PASSWORD_FIELD" alignment="CENTER" promptText="email" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
-            <Text fill="#4fc3f7" strokeType="OUTSIDE" strokeWidth="0.0" text="APP" textAlignment="CENTER" wrappingWidth="61.2786865234375" GridPane.columnIndex="4" GridPane.halignment="CENTER">
-               <font>
-                  <Font name="System Bold" size="22.0" />
-               </font>
-            </Text>
             <TextField id="username" fx:id="firstName" accessibleRole="TEXT" alignment="CENTER" layoutX="240.0" layoutY="133.0" promptText="first name" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -77,20 +74,10 @@
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding>
             </TextField>
-            <Button id="registerBtn" fx:id="goToConnection" mnemonicParsing="false" onAction="#buttonEvents" prefHeight="51.0" prefWidth="144.0" style="-fx-background-color: #4fc3f7;" text="BACK" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="2" GridPane.rowIndex="5">
-               <font>
-                  <Font name="System Bold" size="24.0" />
-               </font>
-            </Button>
          </children>
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </padding>
       </GridPane>
-      <Polygon fill="#4ec8f50d" layoutX="-159.0" layoutY="378.0" points="159.00001525878906, 44.399993896484375, 159.00001525878906, -378.0, 488.9999694824219, 42.999969482421875" stroke="TRANSPARENT" strokeType="INSIDE">
-         <effect>
-            <Bloom />
-         </effect>
-      </Polygon>
    </children>
 </AnchorPane>
