--- a/src/be/ac/ulb/infof307/g06/JavaUI/sample/MainMenu.fxml
+++ b/src/be/ac/ulb/infof307/g06/JavaUI/sample/MainMenu.fxml
@@ -2,13 +2,11 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.effect.Blend?>
+<?import javafx.scene.effect.Bloom?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.paint.Color?>
-<?import javafx.scene.paint.LinearGradient?>
-<?import javafx.scene.paint.Stop?>
 <?import javafx.scene.shape.Polygon?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
@@ -71,66 +69,6 @@
             </Button>
          </children>
       </HBox>
-      <Polygon layoutX="151.0" layoutY="150.0" points="-151.0, 300.0, 387.0, -150.0, -151.0, -150.0" stroke="#caf1ff" strokeType="INSIDE" strokeWidth="0.0">
-         <fill>
-            <LinearGradient endY="1.0" startX="1.0">
-               <stops>
-                  <Stop>
-                     <color>
-                        <Color red="0.5803921818733215" green="0.8745098114013672" blue="1.0" />
-                     </color>
-                  </Stop>
-                  <Stop offset="1.0">
-                     <color>
-                        <Color red="1.0" green="1.0" blue="1.0" />
-                     </color>
-                  </Stop>
-               </stops>
-            </LinearGradient>
-         </fill></Polygon>
-      <Polygon layoutX="99.0" layoutY="737.0" points="-99.0, 163.0, 439.0, 163.0, -99.0, -287.0" stroke="#ecf8fc" strokeType="INSIDE" strokeWidth="0.0">
-         <fill>
-            <LinearGradient endY="1.0" startX="1.0">
-               <stops>
-                  <Stop>
-                     <color>
-                        <Color red="0.7921568751335144" green="0.9450980424880981" blue="1.0" />
-                     </color>
-                  </Stop>
-                  <Stop offset="0.007662835249042145">
-                     <color>
-                        <Color red="0.7921568751335144" green="0.9450980424880981" blue="1.0" />
-                     </color>
-                  </Stop>
-                  <Stop offset="1.0">
-                     <color>
-                        <Color red="1.0" green="1.0" blue="1.0" />
-                     </color>
-                  </Stop>
-               </stops>
-            </LinearGradient>
-         </fill></Polygon>
-      <Polygon layoutX="86.0" layoutY="80.0" points="-86.0, 215.0, 452.0, -80.0, -86.0, -80.0" stroke="#d4f3ff" strokeType="INSIDE" strokeWidth="0.0">
-         <fill>
-            <LinearGradient endX="1.0" endY="1.0" startX="1.0">
-               <stops>
-                  <Stop>
-                     <color>
-                        <Color red="0.5803921818733215" green="0.8745098114013672" blue="1.0" />
-                     </color>
-                  </Stop>
-                  <Stop offset="1.0">
-                     <color>
-                        <Color red="0.8313725590705872" green="0.9529411792755127" blue="1.0" />
-                     </color>
-                  </Stop>
-               </stops>
-            </LinearGradient>
-         </fill>
-      </Polygon>
-      <Polygon fill="#c1e7f5" layoutX="121.0" layoutY="90.0" points="-121.0, 91.0, 417.0, -90.0, -121.0, -90.0" stroke="#c1e7f5" strokeType="INSIDE" strokeWidth="0.0" />
-      <Polygon fill="#d4f3ff" layoutX="50.0" layoutY="855.0" points="-50.0, 45.0, 481.0, 45.0, -50.0, -293.0" stroke="#d4f3ff" strokeType="INSIDE" />
-      <Polygon fill="#c1e7f5" layoutX="72.0" layoutY="828.0" points="-72.0, 72.0, 459.0, 72.0, -72.0, -119.0" stroke="#c1e7f5" strokeType="INSIDE" />
       <Button fx:id="HelpBtn" layoutX="1407.0" layoutY="821.0" mnemonicParsing="false" onAction="#buttonEvents" prefHeight="54.0" prefWidth="50.0" style="-fx-background-color: #4fc3f7;" text="?" textFill="WHITE">
          <font>
             <Font name="Calibri Bold" size="24.0" />
@@ -139,6 +77,22 @@
          <font>
             <Font name="Calibri" size="24.0" />
          </font></Button>
+      <Polygon fill="#4ec8f50d" layoutX="-157.0" layoutY="384.0" points="156.59999084472656, 516.0, 158.59999084472656, 29.0, 685.5999755859375, 516.0" stroke="TRANSPARENT" strokeType="INSIDE">
+         <effect>
+            <Bloom />
+         </effect>
+      </Polygon>
+      <Polygon fill="#4ec8f50d" layoutX="-196.0" layoutY="384.0" points="196.00001525878906, 516.0, 195.59999084472656, 32.0, 653.5999755859375, 516.0" stroke="TRANSPARENT" strokeType="INSIDE" />
+      <Polygon fill="#4ec8f50d" layoutX="-205.0" layoutY="360.0" points="216.00001525878906, 539.2000122070312, 205.59999084472656, 33.0, 598.5999755859375, 540.0" stroke="TRANSPARENT" strokeType="INSIDE" />
+      <Polygon fill="#4fc3f70d" layoutX="-162.0" layoutY="324.0" points="162.00001525878906, 576.0, 161.59999084472656, 93.0, 483.5999755859375, 576.0" stroke="TRANSPARENT" strokeType="INSIDE" />
+      <Polygon fill="#4ec8f50d" layoutX="-156.0" layoutY="-29.0" points="156.59999084472656, 516.0, 158.59999084472656, 29.0, 550.5999755859375, 29.0" stroke="TRANSPARENT" strokeType="INSIDE">
+         <effect>
+            <Bloom />
+         </effect>
+      </Polygon>
+      <Polygon fill="#4ec8f50d" layoutX="-194.0" layoutY="-46.0" points="196.00001525878906, 516.0, 195.59999084472656, 32.0, 534.5999755859375, 32.0" stroke="TRANSPARENT" strokeType="INSIDE" />
+      <Polygon fill="#4ec8f50d" layoutX="-203.0" layoutY="-29.0" points="205.59999084472656, 517.0, 205.59999084472656, 33.0, 456.5999755859375, 33.0" stroke="TRANSPARENT" strokeType="INSIDE" />
+      <Polygon fill="#4fc3f70d" layoutX="-160.0" layoutY="-36.0" points="161.59999084472656, 522.0, 161.59999084472656, 26.0, 357.5999755859375, 26.0" stroke="TRANSPARENT" strokeType="INSIDE" />
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#e1e1e1" height="77.0" stroke="#e1e1e1" strokeType="INSIDE" width="1500.0" />
       <Text fill="WHITE" layoutX="13.0" layoutY="55.0" lineSpacing="1.0" strokeType="OUTSIDE" strokeWidth="0.0" text="MAIN MENU" wrappingWidth="504.9830722808838">
          <font>
