--- a/src/be/ac/ulb/infof307/g06/JavaUI/sample/Visual.fxml
+++ b/src/be/ac/ulb/infof307/g06/JavaUI/sample/Visual.fxml
@@ -99,6 +99,11 @@
                   <Font size="23.0" />
                </font>
             </Label>
+            <Button fx:id="goToStats1" layoutX="-1.0" layoutY="3.0" minWidth="53.0" mnemonicParsing="false" onAction="#buttonEvents" prefHeight="62.0" prefWidth="93.0" style="-fx-background-color: #00000056;" text="Back" textFill="WHITE">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Button>
          </children>
       </Pane>
       <HBox alignment="BOTTOM_RIGHT" layoutX="912.0" layoutY="21.0" prefHeight="40.0" prefWidth="468.0" spacing="12.0">
@@ -125,10 +130,5 @@
             </Button>
          </children>
       </HBox>
-      <Button layoutX="18.0" layoutY="17.0" minWidth="53.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="76.0" style="-fx-background-color: #00000056;" text="Back" textFill="WHITE">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Button>
    </children>
 </AnchorPane>
