--- a/src/be/ac/ulb/infof307/g06/JavaUI/sample/VisualV2.fxml
+++ b/src/be/ac/ulb/infof307/g06/JavaUI/sample/VisualV2.fxml
@@ -11,34 +11,30 @@
 <?import javafx.scene.shape.Polygon?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="850.0" prefWidth="1400.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="be.ac.ulb.infof307.g06.JavaUI.sample.Controller">
+<AnchorPane prefHeight="900.0" prefWidth="1500.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="be.ac.ulb.infof307.g06.JavaUI.sample.Controller">
    <children>
       <VBox layoutX="145.0" layoutY="70.0" prefHeight="91.0" prefWidth="576.0">
          <children>
-            <Label prefHeight="48.0" prefWidth="231.0" text="Visualisation">
+            <Label prefHeight="47.0" prefWidth="260.0" text="Visualisation">
                <font>
-                  <Font size="32.0" />
+                  <Font size="38.0" />
                </font>
             </Label>
-            <Label prefHeight="59.0" prefWidth="436.0" text="Visualise your statistics &amp; expert them in json.">
-               <font>
-                  <Font size="11.0" />
-               </font>
-            </Label>
+            <Label prefHeight="59.0" prefWidth="436.0" text="Visualise your statistics &amp; expert them in json." />
          </children>
       </VBox>
       <HBox alignment="CENTER_RIGHT" layoutX="489.0" layoutY="396.0" prefHeight="62.0" prefWidth="74.0" spacing="10.0" />
-      <TableView layoutX="270.0" layoutY="265.0" prefHeight="521.0" prefWidth="801.0" style="-fx-background-color: #00000056; -fx-background: #f4cbff1d;">
+      <TableView layoutX="331.0" layoutY="217.0" prefHeight="540.0" prefWidth="940.0" style="-fx-background-color: #00000056; -fx-background: #f4cbff1d;">
          <columns>
             <TableColumn prefWidth="35.0" text="Nb" />
-            <TableColumn prefWidth="144.0" text="Name" />
-            <TableColumn prefWidth="119.0" text="Person" />
-            <TableColumn prefWidth="143.0" text="Tasks remaining" />
-            <TableColumn prefWidth="79.0" text="Real " />
-            <TableColumn prefWidth="86.0" text="Estimated " />
+            <TableColumn prefWidth="305.0" text="Name" />
+            <TableColumn prefWidth="282.0" text="Person" />
+            <TableColumn prefWidth="142.0" text="Tasks remaining" />
+            <TableColumn prefWidth="76.0" text="Real " />
+            <TableColumn prefWidth="99.0" text="Estimated " />
          </columns>
       </TableView>
-      <Button fx:id="goToStats" layoutX="4.0" layoutY="5.0" minWidth="53.0" mnemonicParsing="false" onAction="#buttonEvents" prefHeight="38.0" prefWidth="60.0" style="-fx-background-color: #00000056;" text="Back" textFill="WHITE">
+      <Button fx:id="goToStats" layoutX="8.0" layoutY="7.0" minWidth="53.0" mnemonicParsing="false" onAction="#buttonEvents" prefHeight="81.0" prefWidth="93.0" style="-fx-background-color: #00000056;" text="Back" textFill="WHITE">
          <font>
             <Font size="14.0" />
          </font>
@@ -51,21 +47,21 @@
       <Polygon fill="#4ec8f50d" layoutX="-206.0" layoutY="373.0" points="208.00001525878906, 539.2000122070312, 208.0, -368.0, 686.5999755859375, 539.2000122070312" stroke="TRANSPARENT" strokeType="INSIDE" />
       <Polygon fill="#4ec8f50d" layoutX="-214.0" layoutY="373.0" points="216.00001525878906, 539.2000122070312, 213.59999084472656, -369.1999816894531, 598.5999755859375, 540.0" stroke="TRANSPARENT" strokeType="INSIDE" />
       <Polygon fill="#4fc3f70d" layoutX="-162.0" layoutY="373.0" points="161.59999084472656, 540.0, 162.60000610351562, -370.79998779296875, 451.5999755859375, 541.0" stroke="TRANSPARENT" strokeType="INSIDE" />
-      <Button alignment="CENTER" contentDisplay="CENTER" layoutX="1127.0" layoutY="805.0" lineSpacing="10.0" mnemonicParsing="false" prefHeight="62.0" prefWidth="97.0" style="-fx-background-color: #000000;" text="Export" textFill="WHITE">
+      <Button alignment="CENTER" contentDisplay="CENTER" layoutX="1199.0" layoutY="795.0" lineSpacing="10.0" mnemonicParsing="false" prefHeight="62.0" prefWidth="97.0" style="-fx-background-color: #000000;" text="Export" textFill="WHITE">
          <font>
             <Font size="12.0" />
          </font>
       </Button>
-      <HBox alignment="BOTTOM_RIGHT" layoutX="860.0" layoutY="16.0" prefHeight="54.0" prefWidth="526.0" spacing="12.0">
+      <HBox alignment="BOTTOM_RIGHT" layoutX="1087.0" layoutY="20.0" prefHeight="51.0" prefWidth="399.0" spacing="12.0">
          <children>
             <Button minWidth="53.0" mnemonicParsing="false" prefHeight="62.0" prefWidth="93.0" style="-fx-background-color: C0D6E1;" text="Profile" textFill="WHITE">
                <font>
-                  <Font size="12.0" />
+                  <Font size="18.0" />
                </font>
             </Button>
             <Button minWidth="53.0" mnemonicParsing="false" prefHeight="55.0" prefWidth="83.0" style="-fx-background-color: C0D6E1;" text="Settings" textFill="WHITE">
                <font>
-                  <Font size="12.0" />
+                  <Font size="14.0" />
                </font>
             </Button>
             <Button alignment="CENTER" minWidth="45.0" mnemonicParsing="false" prefHeight="58.0" prefWidth="67.0" style="-fx-background-color: C0D6E1;" text="?" textFill="WHITE">
