--- a/src/be/ac/ulb/infof307/g06/JavaUI/sample/SignUpV2.fxml
+++ b/src/be/ac/ulb/infof307/g06/JavaUI/sample/SignUpV2.fxml
@@ -2,8 +2,8 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.effect.Bloom?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -11,73 +11,83 @@
 <?import javafx.scene.shape.Polygon?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="900.0" prefWidth="1500.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="be.ac.ulb.infof307.g06.JavaUI.sample.Controller">
+<AnchorPane prefHeight="425.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/15.0.1"
+            xmlns:fx="http://javafx.com/fxml/1" fx:controller="be.ac.ulb.infof307.g06.JavaUI.sample.Controller">
    <children>
-      <Button fx:id="SignUpBtn" layoutX="611.0" layoutY="701.0" mnemonicParsing="false" onAction="#buttonEvents" prefHeight="53.0" prefWidth="278.0" style="-fx-background-color: #4fc3f7;" text="SIGN UP" textAlignment="CENTER" textFill="WHITE">
-         <font>
-            <Font name="Calibri Bold" size="24.0" />
-         </font>
-      </Button>
-      <Button fx:id="goToConnection" layoutX="611.0" layoutY="778.0" mnemonicParsing="false" onAction="#buttonEvents" prefHeight="53.0" prefWidth="278.0" style="-fx-background-color: #4fc3f7;" text="BACK" textAlignment="CENTER" textFill="WHITE">
-         <font>
-            <Font name="System Bold" size="24.0" />
-         </font>
-      </Button>
-      <Polygon fill="#4ec8f50d" layoutX="-206.0" layoutY="378.0" points="206.0, 522.0, 206.00001525878906, -378.0, 626.0, 522.0" stroke="TRANSPARENT" strokeType="INSIDE" />
-      <Polygon fill="#4ec8f50d" layoutX="-154.0" layoutY="378.0" points="154.0, 522.0, 154.00001525878906, -378.0, 465.0, 522.0" stroke="TRANSPARENT" strokeType="INSIDE" />
-      <Polygon fill="#4ec8f50d" layoutX="-198.0" layoutY="378.0" points="198.0, 522.0, 198.00001525878906, -378.0, 710.0, 522.0" stroke="TRANSPARENT" strokeType="INSIDE" />
-      <Polygon fill="#4ec8f50d" layoutX="-159.0" layoutY="378.0" points="159.0, 522.0, 159.00001525878906, -378.0, 747.0, 521.0" stroke="TRANSPARENT" strokeType="INSIDE">
-         <effect>
-            <Bloom />
-         </effect>
-      </Polygon>
-      <GridPane hgap="10.0" layoutX="387.0" layoutY="219.0" prefHeight="462.0" prefWidth="727.0" vgap="10.0">
+      <GridPane hgap="10.0" layoutY="-89.0" prefHeight="490.0" prefWidth="700.0" vgap="10.0"
+                AnchorPane.bottomAnchor="33.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
+                AnchorPane.topAnchor="-89.0">
          <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="75.0" />
-            <ColumnConstraints hgrow="SOMETIMES" />
-            <ColumnConstraints hgrow="SOMETIMES" />
-            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" />
-            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="75.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="173.0"/>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="173.4"/>
+            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="102.3999633789063" prefWidth="173.0"/>
+            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="101.19998779296873"/>
          </columnConstraints>
          <rowConstraints>
-            <RowConstraints minHeight="10.0" prefHeight="109.3999755859375" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="108.0" minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="67.0" minHeight="10.0" prefHeight="54.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="12.800021362304676" prefHeight="12.800021362304676" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="25.800012207031273" prefHeight="53.79996337890623" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="43.59999694824222" prefHeight="55.40003662109376" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="189.60000610351562" minHeight="25.0" prefHeight="189.60000610351562"
+                            vgrow="SOMETIMES"/>
+            <RowConstraints maxHeight="110.4" minHeight="33.599993896484364" prefHeight="33.599993896484364"
+                            vgrow="SOMETIMES"/>
+            <RowConstraints maxHeight="87.39999999999999" minHeight="20.0" prefHeight="27.200000000000017"
+                            vgrow="SOMETIMES"/>
+            <RowConstraints maxHeight="40.80000000000001" minHeight="1.5999999999999943" prefHeight="5.200006103515619"
+                            vgrow="SOMETIMES"/>
+            <RowConstraints maxHeight="64.80001220703122" minHeight="49.599999999999966" prefHeight="49.599999999999966"
+                            vgrow="SOMETIMES"/>
+            <RowConstraints vgrow="SOMETIMES"/>
+            <RowConstraints vgrow="SOMETIMES"/>
          </rowConstraints>
          <children>
-            <TextField  fx:id="signUpUsernameField" accessibleRole="TEXT" alignment="CENTER" promptText="username" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
-               <padding>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-               </padding>
-            </TextField>
-            <TextField  fx:id="emailField" accessibleRole="PASSWORD_FIELD" alignment="CENTER" promptText="email" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
-            <TextField  fx:id="firstNameField" accessibleRole="TEXT" alignment="CENTER" layoutX="240.0" layoutY="133.0" promptText="first name" GridPane.columnIndex="1" GridPane.rowIndex="1">
-               <padding>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-               </padding>
-            </TextField>
-            <TextField fx:id="lastNameField" accessibleRole="TEXT" alignment="CENTER" layoutX="240.0" layoutY="133.0" promptText="last name" GridPane.columnIndex="1" GridPane.rowIndex="2">
-               <padding>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-               </padding>
-            </TextField>
-            <TextField fx:id="signUpPasswordField" accessibleRole="TEXT" alignment="CENTER" layoutX="240.0" layoutY="133.0" promptText="password" GridPane.columnIndex="3" GridPane.rowIndex="1">
-               <padding>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-               </padding>
-            </TextField>
-            <TextField fx:id="passwordConfirmationField" accessibleRole="TEXT" alignment="CENTER" layoutX="240.0" layoutY="133.0" promptText="confirm password" GridPane.columnIndex="3" GridPane.rowIndex="2">
-               <padding>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-               </padding>
-            </TextField>
+            <TextField fx:id="firstNameField" alignment="CENTER" layoutX="281.0" layoutY="267.0" promptText="first name"
+                       GridPane.columnIndex="1" GridPane.rowIndex="1"/>
+            <TextField fx:id="lastNameField" alignment="CENTER" layoutX="136.0" layoutY="225.0" promptText="last name"
+                       GridPane.columnIndex="1" GridPane.rowIndex="2"/>
+            <TextField fx:id="signUpUsernameField" alignment="CENTER" promptText="username" GridPane.columnIndex="2"
+                       GridPane.rowIndex="1"/>
+            <TextField fx:id="emailField" alignment="CENTER" layoutX="281.0" layoutY="225.0" promptText="email"
+                       GridPane.columnIndex="2" GridPane.rowIndex="2"/>
+            <PasswordField fx:id="signUpPasswordField" alignment="CENTER" promptText="password" GridPane.columnIndex="3"
+                           GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+               <GridPane.margin>
+                  <Insets/>
+               </GridPane.margin>
+            </PasswordField>
+            <PasswordField fx:id="passwordConfirmationField" alignment="CENTER" layoutX="469.0" layoutY="225.0"
+                           promptText="confirm password" GridPane.columnIndex="3" GridPane.rowIndex="2"/>
+            <Button id="connectionBtn" fx:id="SignUpBtn" mnemonicParsing="false" onAction="#buttonEvents"
+                    prefHeight="45.0" prefWidth="170.0" style="-fx-background-color: #4fc3f7;" text="SIGN UP"
+                    textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="2" GridPane.rowIndex="4">
+               <font>
+                  <Font name="Calibri Bold" size="24.0"/>
+               </font>
+            </Button>
+            <Button id="registerBtn" fx:id="goToConnection" mnemonicParsing="false" onAction="#buttonEvents"
+                    prefHeight="45.0" prefWidth="170.0" style="-fx-background-color: #4fc3f7;" text="BACK"
+                    textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="2" GridPane.rowIndex="5">
+               <font>
+                  <Font name="Calibri Bold" size="24.0"/>
+               </font>
+            </Button>
          </children>
          <padding>
-            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
          </padding>
+         <opaqueInsets>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+         </opaqueInsets>
       </GridPane>
+      <Polygon fill="#4fc3f70d" layoutX="-122.0" layoutY="-486.0"
+               points="120.99995422363281, 919.0, 121.99998474121094, 486.0, 481.7999267578125, 919.0"
+               stroke="TRANSPARENT" strokeType="INSIDE"/>
+      <Polygon fill="#4fc3f70d" layoutX="-122.0" layoutY="-481.0"
+               points="121.99998474121094, 914.5999755859375, 121.99998474121094, 486.0, 396.99993896484375, 914.5999755859375"
+               stroke="TRANSPARENT" strokeType="INSIDE"/>
+      <Polygon fill="#4fc3f70d" layoutX="-123.0" layoutY="-478.0"
+               points="121.99999237060547, 911.0, 121.99998474121094, 486.0, 316.39996337890625, 911.0"
+               stroke="TRANSPARENT" strokeType="INSIDE"/>
+      <Polygon fill="#4fc3f70d" layoutX="-122.0" layoutY="-482.0"
+               points="120.99996948242188, 915.0, 121.99998474121094, 486.0, 240.99993896484375, 915.0"
+               stroke="TRANSPARENT" strokeType="INSIDE"/>
    </children>
 </AnchorPane>
